fixed overflow img lego dreamzz

--- a/merge sito/Style_main.css
+++ b/merge sito/Style_main.css
@@ -1157,6 +1157,7 @@
     display: flex;
     justify-content: center;
     position: relative;
+   overflow: hidden;
     
   }
   
